--- a/policies/cla.yml
+++ b/policies/cla.yml
@@ -4,7 +4,7 @@ description: CLA policy file
 resource: repository
 configuration: 
    cla:
-      content: https://raw.githubusercontent.com/microsoft/.github/main/CLA/microsoft.yml
+      content: https://raw.githubusercontent.com/cake-build/.github/main/CLA/dotnetfoundation.yml
       minimalChangeRequired: 
          files: 1
          codeLines: 16
